@@ -3,6 +3,7 @@ cm4all-myproxy (0.20) unstable; urgency=low
   * increase listener backlog to 256
   * prometheus: wait for HTTP request to arrive
   * prometheus: export Lua error counter
+  * prometheus: export per-server query statistics
 
  --   
 
